--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "inert": "^5.1.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
+    "less-loader": "^4.1.0",
     "prop-types": "latest",
     "react": "^16.2.0",
     "react-css-modules": "^4.7.7",
