统一改用 dva/router 以解决无法运行的问题

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint",
     "buildClient": "webpack --config webpack.config.client.js",
-    "buildServer": "BABEL_ENV=server  webpack --config webpack.config.server.js",
+    "buildServer": "cross-env BABEL_ENV=server webpack --config webpack.config.server.js",
     "ssr": "nodemon dist/server.js",
     "format": "prettier-eslint \"src/**/*.js\"",
     "route": "node tool/generator.js && prettier-eslint \"src/routes.js\"",
@@ -60,6 +60,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^1.0.0",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
